# capytaine-julia-backend

./: README.md  juliapkg.json  mockup.py  pyproject.toml  test.py  try1.py
src/capytaine_julia_backend/: __init__.py
