[project]
name = "capytaine_julia_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Matthieu Ancellin", email = "31126826+mancellin@users.noreply.github.com" }
]
dependencies = [
    "juliacall"
]

[dependency-groups]
dev = [
    "capytaine>=2.3",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
